# producer_consumer

./: .gitignore  CMakeLists.txt
scripts/: run_demo.sh  stress.sh
src/: main.cpp  threadsafe_queue.h
tests/: test_queue.cpp
